# ssdp_hdf5_extention

./: .gitignore  README.md  devenv.nix
examples/: Makefile
examples/src/: example_1.c  example_2.c  example_3.c  example_4.c  example_4_pretty.c  example_5.c
hd5extention/: Makefile  README.md  compile_commands.json  pyproject.toml  setup_primes.py
hd5extention/src/: H5Dataset.c  H5Dataset.h  H5Datatypes.c  H5Datatypes.h  H5Enums.c  H5Enums.h  H5FileIO.c  H5FileIO.h  H5Properties.c  H5Properties.h  H5Table.c  H5Table.h  enums.c  enums.h  primes_table.c  primes_table.h  utils.c  utils.h
hd5extention/tests/: test1.c  test_H5Datatype.c  test_H5FileIO.c  test_H5FileIOHandlerPool.c  test_compression.c  test_primes.c
