[tool.poetry]
name = "hd5extention"
version = "0.1.0"
description = ""
authors = ["Michael <m.gordon@fz-juelich.de>"]

[tool.poetry.dependencies]
python = "^3.10"
compiledb = "^0.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
